added the semicolon back

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         }
         
         function reset() {
-            counter = 100
+            counter = 100;
             updateDisplay();
         }
         
